--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -104,7 +104,21 @@
       background-position: calc(100% + var(--shiny-width)) 0;
     }
   }
-}
+  --animate-meteor: meteor 5s linear infinite
+;
+  @keyframes meteor {
+  0% {
+    transform: rotate(var(--angle)) translateX(0);
+    opacity: 1;
+    }
+  70% {
+    opacity: 1;
+    }
+  100% {
+    transform: rotate(var(--angle)) translateX(-500px);
+    opacity: 0;
+    }
+  }}
 
 :root {
   --radius: 0.625rem;
